--- a/Sentinel/description.html
+++ b/Sentinel/description.html
@@ -112,7 +112,7 @@
                 <td><b>Address:</b></td>
                 <td>1250 Chartwell Drive,
                     West Vancouver, BC,
-                    V7S 2R2</td>
+                    V7S 2R2, Canada</td>
             </tr>
             <td><b>Phone:</b></td>
             <td>(604) 981-1130</td>
@@ -120,6 +120,10 @@
             </tr>
             <td><b>Fax:</b></td>
             <td>(604) 981-1131</td>
+            </tr>
+            </tr>
+            <td><b>Website:</b></td>
+            <td>http://sd45.bc.ca/sentinel</td>
             </tr>
         </table>
         
