added teacher websites and emails

--- a/Sentinel/description.html
+++ b/Sentinel/description.html
@@ -56,7 +56,7 @@
         <br />
         <br />
         <img src="Sentinel_Text_Logo.png" width="811" height="193" class="centeredImage" alt="Sentinel" />
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sentinel Secondary is a comprehensive high school that currently enrolls over 1170 students in Grades 8 through 12. Sentinel also offers a number of special programs including Advanced Placement, French Immersion, Computer Immersion, Super Achievers and the Hockey, Soccer, and Tennis Academies.</p>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sentinel Secondary is a comprehensive high school that currently enrolls over 1170 students in Grades 8 through 12. Sentinel also offers a number of special programs including Advanced Placement, French Immersion, Super Achievers and the Hockey, Soccer, and Tennis Academies.</p>
         <br />
         <h3>School Value Statement:</h3>
         
@@ -78,16 +78,16 @@
         <h3>School Info:</h3>
         <table width="903">
             <tr>
-                <td width="347"><b>Principal:</b></td>
-                <td width="544">Jeannette Laursoo</td>
+                <td width="347"><b>Acting Principal:</b></td>
+                <td width="544">Mike Finch</td>
             </tr>
             <tr>
                 <td><b>Vice-Principal:</b></td>
                 <td>Rebecca Rowley</td>
             </tr>
             <tr>
-                <td><b>Vice-Principal:</b></td>
-                <td>Mike Finch</td>
+                <td><b>Acting Vice-Principal:</b></td>
+                <td>Craig Chubb</td>
             </tr>
             <tr>
                 <td><b>Exec Assistant:</b></td>
@@ -102,7 +102,7 @@
         <table width="732">
             <tr>
                 <td width="348"><b>Enrollment:</b></td>
-                <td width="372">1,126</td>
+                <td width="372">1,170</td>
             </tr>
             <tr>
                 <td><b>Grades:</b></td>
