--- a/Sentinel/about_us.html
+++ b/Sentinel/about_us.html
@@ -58,8 +58,8 @@
         <br />
         <img src="The_Team_Text3.png" width="575" height="114" class="centeredImage" />
         <p align="center">Adam Mitha</p>
-        <p align="center">Justin C. Wong</p>
-        <p align="center">Jun Jeagal</p>
+        <p align="center">Justin Charles Wong</p>
+        <p align="center">Ryan Jun Jeagal</p>
         <p align="center">Sailesh Suri</p>
         
         <br />
